New design for createHero